# AudioAndRedio

./: build.gradle  config.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/xyp/audioandvedio/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: SimpleLame.cpp  me_xyp_audioandvedio_SimpleLame.h
app/src/main/cpp/aaa/: me_xyp_audioandvedio_JniTest.h
app/src/main/cpp/lamemp3/: id3tag.c  set_get.h
app/src/main/cpp/nativetest/: native-lib.cpp
app/src/main/java/me/xyp/audioandvedio/: JniTest.java  MainActivity.kt
app/src/main/java/me/xyp/audioandvedio/audio/: AudioRecordManager.kt  DataEncodeThread.java  PCMFormat.java  SimpleLame.java
app/src/main/jni/: Android.mk  Application.mk  test.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/xyp/audioandvedio/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
